Fixing pre code whitespace

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -863,7 +863,7 @@ Usage (In Ghost editor):
     padding: 0;
     font-size: inherit;
     line-height: inherit;
-    white-space: pre-wrap;
+    white-space: pre;
     background: transparent;
 }
 
